quic/s2n-quic-core/src/recovery/bbr/snapshots/quic__s2n-quic-core__src__recovery__bbr__startup__events__check_startup_done.snap
---
source: quic/s2n-quic-core/src/recovery/bbr/startup.rs
expression: ""
---
SlowStartExited { path_id: 0, cause: Other, congestion_window: 12000 }
BbrStateChanged { path_id: 0, state: Drain }
