quic/s2n-quic-core/src/recovery/bbr/snapshots/quic__s2n-quic-core__src__recovery__bbr__startup__events__check_startup_done_filled_pipe_on_loss_round_start.snap
---
source: quic/s2n-quic-core/src/recovery/bbr/startup.rs
expression: ""
---
SlowStartExited { path_id: 0, cause: Other, congestion_window: 12000 }
