quic/s2n-quic-core/src/recovery/bbr/snapshots/quic__s2n-quic-core__src__recovery__bbr__startup__events__enter_startup.snap
---
source: quic/s2n-quic-core/src/recovery/bbr/startup.rs
expression: ""
---
BbrStateChanged { path_id: 0, state: Startup }
